<resources>
    <string name="app_name">Secure Image Viewer</string>
    <string name="action_settings">Settings</string>
    <string name="action_info_view">View Info</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="search_hint">Search</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_twofactor">2FA Code</string>
    <string name="info_twofactor">A two factor authorization code has been sent to your email.</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="notification_channel_name">Notifications</string>
    <string name="notification_channel_description"></string>
    <string name="download_channel_name">Downloads</string>
    <string name="download_channel_description">Gives updates regarding folder downloading</string>

    <!-- Messages Preferences -->
    <string name="sso_settings_header">SSO Settings</string>
    <string name="web_server_header">Web Server Settings</string>
    <string name="storage_info_header">Storage Information</string>
    <string name="storage_header">Storage Settings</string>
    <string name="web_server_settings_button">Server Settings</string>
    <string name="storage_settings_button">Storage</string>
    <string name="url_title">Web server url</string>
    <string name="port_title">Web server port</string>
    <string name="api_version_title">API version</string>
    <string name="update_catagory_title">Update catagory listing</string>
    <string name="update_catagory_summary">Updates the catagory listing</string>
    <string name="update_subject_title">Update subject listing</string>
    <string name="update_subject_summary">Updates the subject listing</string>
    <string name="https_toggle_title">Use HTTPS</string>
    <string name="sso_fragment_header">SSO Setup</string>
    <string name="sso_authenticate_header">Authenticate</string>
    <string name="sso_config_header">Config</string>
    <string name="sso_login">Login</string>
    <string name="sso_login_summary">Login through SSO service</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="title_activity_test">Test</string>
    <string name="update_artist_title">Update artist listing</string>
    <string name="update_artist_summary">Updates the artist listing</string>
    <string name="authservice_connecting">Connecting to Auth Service</string>
    <string name="requestservice_connecting">Connecting to Request Service</string>
    <string name="service_connected">Connected</string>
    <string name="online_viewer_title">Online Image Viewer</string>
    <string name="offline_viewer_title">Image Viewer</string>
    <string name="settings_title">Settings</string>
    <string name="auth_error_connection">Unable to connect to Auth Service</string>
    <string name="request_error_connection">Unable to connect to Request Service</string>
    <string name="requestservice_authenticating">Authenticating</string>
    <string name="device_authenticate_error">Unable to authenticate device</string>
    <string name="online_authentication_required">Online authentication required</string>
    <string name="title_activity_device_login">DeviceLoginActivity</string>
    <string name="connectivity_status_header">Connectivity Status: </string>
    <string name="connectivity_status_offline">Offline</string>
    <string name="connectivity_status_connecting">Connecting</string>
    <string name="connectivity_status_online">Online</string>
    <string name="twofactor_code_invalid">2FA code invalid. Please try again</string>
    <string name="back_button_desc_string">Back button</string>
    <string name="more_options_button_desc_string">More options button</string>
    <string name="favourite_button_desc_string">Favourite button</string>
    <string name="recent_files">Recents</string>
    <string name="view_downloads">View Downloads</string>
    <string name="download_selection">Download Selection</string>
    <string name="delete_folder">Delete folder</string>
    <string name="favourites">Favourites</string>
    <string name="sort_by">Sort By</string>
    <string name="menu_user_title">User</string>

    <string name="file_viewer_title">Folders</string>
    <string name="file_search_title">Search</string>
    <string name="folder_authentication_title">Folder Authentication</string>
    <string name="folder_authentication_subtitle">Authentication is required to view this folder</string>
</resources>