<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory app:title="@string/sso_settings_header">
        <Preference
            app:title="Setup"
            app:key="ssoButton"
            app:summary="@string/sso_login_summary"/>
</PreferenceCategory>
    <PreferenceCategory app:title="@string/web_server_header">
        <Preference
            app:title="Setup"
            app:key="apiSettingsBtn"
            app:summary="@string/web_server_settings_button"/>

    </PreferenceCategory>
    <PreferenceCategory app:title="General">
        <Preference android:title="Refresh"
            app:key="webRefresh"
            app:summary="Refresh connection"/>
    </PreferenceCategory>
</PreferenceScreen>